--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
                         <p class="presentacion">👋 Hola! Soy Matias Bazan</p>
                         <h1 class="titulo">Me gusta crear <br class="d-none d-lg-block">cosas <span id="color">divertidas</span> e <span id="color">interactivas</span> con <br class="d-none d-lg-block">código.</h1>
                         <div class="contenedor-boton">
-                            <button class="boton-cv">Descargar CV</button>
+                            <a href="cv/CV_Matias_Bazan.pdf" target="_blank" download="CV_Matias_Bazan.pdf">
+                                <button class="boton-cv">Descargar CV</button>
+                            </a>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-12 imagen text-center">
@@ -156,7 +158,7 @@
         }
     </script>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.min.js" integrity="sha384-7qAoOXltbVP82dhxHAUje59V5r2YsVfBafyUDxEdApLPmcdhBPg1DKg1ERo0BZlK" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </body>
 </html>
